# toy_robot_simulator

./: .gitignore  README.md  exec.py  pyproject.toml
tests/: test_robot.py
