[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "toy_robo_simulator"
description = "A toy robot simulator"
autiors = ["Iliya Iliev"]
version = "0.0.1"

[tool.poetry.dependencies]
python = "~3.13.2"
pytest = "~8.3.5"

[tool.ruff]
line-length = 120
lint.select = ["COM812"]

[tool.pyright]
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
execute = ["venv*", ]

[tool.coverage.run]
omit = ["test/**"]
